Implementing handling for multiple pumps

--- a/Todo.txt
+++ b/Todo.txt
@@ -17,6 +17,6 @@
 - Write drivers for SSR                                                         - 2.4kW element implemented
 - Init screen
 - Fix crash when LCD is not plugged in                                          - Done
-- Write menu and screen functionality
-- Write alcohol concentration estimator for vapour and liquid phases              
-- Increase stability of pushbutton input
+- Write menu and screen functionality                                           - Done
+- Write alcohol concentration estimator for vapour and liquid phases            - Done
+- Increase stability of pushbutton input                                        - Done
