Updated Controller and Pump classes and tested on hardware. OTA bug popped up, not sure of the reason

--- a/Todo.txt
+++ b/Todo.txt
@@ -20,3 +20,4 @@
 - Write menu and screen functionality                                           - Done
 - Write alcohol concentration estimator for vapour and liquid phases            - Done
 - Increase stability of pushbutton input                                        - Done
+- Fix OTA crashing on reboot bug
