--- a/Todo.txt
+++ b/Todo.txt
@@ -10,7 +10,7 @@
 - Modify drivers to work with new PCB
 - Fix compiler warnings                                                         - Completed
 - Record current process data in RAM                
-- Change messaging protocol to JSON
+- Change messaging protocol to JSON                                             - Done
 - Create small factory app to OTA full app
 - Write drivers for flowrate sensors
 - Write drivers for input 
@@ -20,8 +20,8 @@
 - Write menu and screen functionality                                           - Done
 - Write alcohol concentration estimator for vapour and liquid phases            - Done
 - Increase stability of pushbutton input                                        - Done
-- Fix OTA crashing on reboot bug
-- Transmit settings to webserver
+- Fix OTA crashing on reboot bug                                                - Done, disabled SPI mem check on startup
+- Transmit settings to webserver                                                - Done
 - Change to PI controller 
 - Include Feedforward control 
 - Configurable minimum pump speeds
@@ -31,3 +31,4 @@
 - Update browser on states when connecting
 - Fix LCD bug while running pumps
 - Calibrate flow meter
+- Temp sensor assignment routine
