Increased temp sensor res to 11bit

--- a/Todo.txt
+++ b/Todo.txt
@@ -32,3 +32,4 @@
 - Fix LCD bug while running pumps
 - Calibrate flow meter
 - Temp sensor assignment routine
+- Change temp sensor resolution to 11bit                                        - Done
