--- a/Todo.txt
+++ b/Todo.txt
@@ -37,7 +37,7 @@
 - Add process phase tracking
 - Negotiate bus usage between scanning sensors and reading temps                - Done
 - Scan for new sensors without restarting
-- Unit tests for thermo concentration calculations
+- Unit tests for thermo concentration calculations                              - Done
 - Remove sensor without corrupting bus
 - Both relays working
 - Duty cycle for relays
