--- a/Todo.txt
+++ b/Todo.txt
@@ -1,44 +1,18 @@
-- Fix ongoing controller performance issues                                     - Controller tuned
-- Migrate to fully ESP32 based webserver                                        - Done
-    - Fix crashing issue on browser reload/exit                                 - Done
-    - Implement handling of multiple connections                                - Done
-- D-term filtering                                                              - Unsure if beneficial
-- Acceleration limits on pump                                                   - Unsure if beneficial
+- D-term filtering                                                              - Partially complete
 - I-term engage only once still is up to temperature                            
-- Set fan to function automatically                                             - Completed
-- Remove support for Python client                                              - Completed
-- Modify drivers to work with new PCB                                           - Completed
-- Fix compiler warnings                                                         - Completed
 - Record current process data in RAM                
-- Change messaging protocol to JSON                                             - Done
 - Create small factory app to OTA full app
-- Write drivers for flowrate sensors
-- Write drivers for input 
-- Write drivers for SSR                                                         - 2.4kW element implemented
-- Fix crash when LCD is not plugged in                                          - Done
-- Write menu and screen functionality                                           - Done
-- Write alcohol concentration estimator for vapour and liquid phases            - Done
-- Increase stability of pushbutton input                                        - Done
-- Fix OTA crashing on reboot bug                                                - Done, disabled SPI mem check on startup
-- Transmit settings to webserver                                                - Done
-- Change to PI controller                                                       - Not required
+- Write drivers for flowrate sensors                                            - Partially complete
 - Include Feedforward control 
 - Configurable minimum pump speeds
-- Fix max pump speed issue                                                      - Done
-- Increase chart upper limit to 100 degrees                                     - Done 
 - Install flowmeters
-- Update browser on states when connecting                                      - Done
-- Fix LCD bug while running pumps                                               - Done
 - Calibrate flow meter
-- Temp sensor assignment routine                                                - Done
-- Change temp sensor resolution to 11bit                                        - Done
-- Print meaningful logs                                                         - Done
-- Add browser based OTA terminal (network logging)                              - Done
+- Add browser based OTA terminal (network logging)
 - Add process phase tracking
-- Negotiate bus usage between scanning sensors and reading temps                - Done
 - Scan for new sensors without restarting
-- Unit tests for thermo concentration calculations                              - Done
-- Remove sensor without corrupting bus
-- Both relays working
 - Duty cycle for relays
-- JSON T_reflux double up
+- Pumps not working
+- Element controls not working
+- Move controller peripheral states to _peripheralState
+- Implement _temperatureDataCB
+- serialize/deserialize virtual methods on MessageBase
