--- a/Todo.txt
+++ b/Todo.txt
@@ -10,9 +10,7 @@
 - Add browser based OTA terminal (network logging)
 - Add process phase tracking
 - Scan for new sensors without restarting
-- Duty cycle for relays
-- Pumps not working
-- Element controls not working
-- Move controller peripheral states to _peripheralState
-- Implement _temperatureDataCB
+- Duty cycle for relays             
 - serialize/deserialize virtual methods on MessageBase
+- Telemeter controller output data
+- Pump modes
