--- a/Todo.txt
+++ b/Todo.txt
@@ -13,3 +13,4 @@
 - Queue operations are not atomic and could cause concurrency problems
 - Implement heap monitoring in distillerManager
 - Implement handling for failure modes
+- DS10B20 calibration
