Denoised a lot of logging. Serializing sensor object with calibration data

--- a/Todo.txt
+++ b/Todo.txt
@@ -14,3 +14,4 @@
 - Implement heap monitoring in distillerManager
 - Implement handling for failure modes
 - DS10B20 calibration
+- Handle message loopback
