--- a/Todo.txt
+++ b/Todo.txt
@@ -8,9 +8,7 @@
 - Calibrate flow meter
 - Add process phase tracking
 - Scan for new sensors without restarting       
-- serialize/deserialize virtual methods on MessageBase
-- Deserialize doesn't init uninitialized MessageBase
 - Queue operations are not atomic and could cause concurrency problems
 - Implement heap monitoring in distillerManager
 - Implement handling for failure modes
-- Build PBProtoBuf IO classes as library and link with main application
+- Do not loopback messages
